# experiment-gym

./: .gitignore  CMakeLists.txt  Makefile  README.md  correct  incorrect
src/: CMakeLists.txt  cliquegen.cpp  preprocessor.cpp  runner.cpp
src/Array/: ArrayUtilities.cpp  ArrayUtilities.h  BitDictionary.cpp  BitDictionary.h  BitVectorUtil.cpp  BitVectorUtil.h  MinHeap.cpp  MinHeap.h  bitMarkIntersection.cpp  intersection.cpp  intersection.h  operators.h  simdintersection.cpp
src/Graph/: BitMatrix.cpp  BitMatrix.h  GHDNode.cpp  GHDNode.h  graph.cpp  graph.h  graphgen.cpp
src/Operators/: AttrEval.cpp  AttrEval.h  BitMatrixEvaluator.cpp  BitMatrixEvaluator.h  NaiveGHDEvaluator.cpp  NaiveGHDEvaluator.h  Pipeline.cpp  Pipeline.h  Trie.cpp  Trie.h  evaluators.cpp  evaluators.h
src/definitions/: definitions.h
src/experiments/: 4clique.h  Tile.cpp  Tile.h  array_exp.h  branch_eval.h  charecteristics.h  memory_experiments.h  naive_triangle_counting.h  redundant.cpp  square_counting.cpp  square_counting.h  tiling.h
src/timers/: timer.h  timers.cpp
test/: CMakeLists.txt  Main_TestAll.cpp  arrays.cpp  baseline.cpp  simd.cpp
